[package]
name = "kcli"
version = "0.1.0"
authors = ["<nolik03@godeltech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
log = "0.4.8"
rdkafka = "0.23.1"
uuid = { version = "0.8.1", features = ["v4"] }
futures = "0.3.5"
tokio = { version = "0.2.21", features = ["blocking", "macros", "rt-core", "time"] }
