[package]
name = "kcli"
version = "0.1.0"
authors = ["<nolik03@godeltech.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
log = "0.4.14"
rdkafka = "0.27.0"
uuid = { version = "0.8.2", features = ["v4"] }
futures = "0.3.17"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread", "time"] }
