[package]
name = "kcli"
version = "0.1.0"
authors = ["<nolik03@godeltech.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
log = "0.4.14"
rdkafka = "0.28.0"
uuid = { version = "1.1.2", features = ["v4"] }
futures = "0.3.21"
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread", "time"] }

